<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newsFragment"
    android:background="#FAFAE9B7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#461150"
                />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:padding="1dp"
            android:textStyle="bold"
            android:textColor="#009688"/>

        <TextView
            android:id="@+id/fill_me1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:padding="1dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:padding="1dp"
            android:textStyle="bold"
            android:textColor="#009688"
            />

        <TextView
            android:id="@+id/fill_me2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:padding="1dp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:padding="1dp"
            android:textStyle="bold"
            android:textColor="#009688"/>

        <TextView
            android:id="@+id/fill_me3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:padding="1dp"
            android:textColor="#3F51B5"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pubDate"
            android:padding="1dp"
            android:textStyle="bold"
            android:textColor="#009688"/>

        <TextView
            android:id="@+id/fill_me4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:padding="1dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>