<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Favorite"
android:orientation="vertical">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/my_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:title="@string/favourite"
    />

<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favNews"
                android:textSize="20dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#3F51B5"/>

            <ListView
                android:id="@+id/listView2"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_gravity="start"
                android:padding="5dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            <Button
                android:id="@+id/delFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:textSize="10dp"
                android:layout_marginRight="10dp"
                android:padding="0dp"
                android:backgroundTint="#F44336"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent">
            </Button>

            <FrameLayout
                android:id="@+id/fragmentLocation2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </FrameLayout>

    <!-- Navigation menu -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>




</LinearLayout>

